demo-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: backend-policy
    namespace: demo
spec:
    endpointSelector:
        matchLabels:
            k8s:app: backend
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
            k8s:io.cilium.k8s.policy.cluster: kind-policypilot
            k8s:io.cilium.k8s.policy.serviceaccount: default
            k8s:io.kubernetes.pod.namespace: demo
            k8s:version: v1
    ingress:
        - fromEndpoints:
            - matchLabels:
                k8s:app: database
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
                k8s:version: v1
          toPorts:
            - ports:
                - port: "33240"
                  protocol: TCP
                - port: "33244"
                  protocol: TCP
                - port: "33260"
                  protocol: TCP
                - port: "33270"
                  protocol: TCP
                - port: "33282"
                  protocol: TCP
                - port: "54262"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                k8s:app: frontend
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
                k8s:version: v1
          toPorts:
            - ports:
                - port: "80"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                k8s:app: traffic-generator
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
          toPorts:
            - ports:
                - port: "80"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: coredns
                k8s:io.kubernetes.pod.namespace: kube-system
                k8s:k8s-app: kube-dns
          toPorts:
            - ports:
                - port: "45272"
                  protocol: UDP
                - port: "48236"
                  protocol: UDP
                - port: "48311"
                  protocol: UDP
                - port: "51308"
                  protocol: UDP
                - port: "52186"
                  protocol: UDP
                - port: "55397"
                  protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: database-policy
    namespace: demo
spec:
    endpointSelector:
        matchLabels:
            k8s:app: database
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
            k8s:io.cilium.k8s.policy.cluster: kind-policypilot
            k8s:io.cilium.k8s.policy.serviceaccount: default
            k8s:io.kubernetes.pod.namespace: demo
            k8s:version: v1
    ingress:
        - fromEndpoints:
            - matchLabels:
                k8s:app: backend
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
                k8s:version: v1
          toPorts:
            - ports:
                - port: "80"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                k8s:app: traffic-generator
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
          toPorts:
            - ports:
                - port: "80"
                  protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: frontend-policy
    namespace: demo
spec:
    endpointSelector:
        matchLabels:
            k8s:app: frontend
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
            k8s:io.cilium.k8s.policy.cluster: kind-policypilot
            k8s:io.cilium.k8s.policy.serviceaccount: default
            k8s:io.kubernetes.pod.namespace: demo
            k8s:version: v1
    ingress:
        - fromEndpoints:
            - matchLabels:
                k8s:app: backend
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
                k8s:version: v1
          toPorts:
            - ports:
                - port: "37748"
                  protocol: TCP
                - port: "37750"
                  protocol: TCP
                - port: "37758"
                  protocol: TCP
                - port: "37772"
                  protocol: TCP
                - port: "37782"
                  protocol: TCP
                - port: "58562"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                k8s:app: traffic-generator
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
          toPorts:
            - ports:
                - port: "80"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: coredns
                k8s:io.kubernetes.pod.namespace: kube-system
                k8s:k8s-app: kube-dns
          toPorts:
            - ports:
                - port: "42724"
                  protocol: UDP
                - port: "44128"
                  protocol: UDP
                - port: "44771"
                  protocol: UDP
                - port: "46513"
                  protocol: UDP
                - port: "53454"
                  protocol: UDP
                - port: "56945"
                  protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: traffic-generator-policy
    namespace: demo
spec:
    endpointSelector:
        matchLabels:
            k8s:app: traffic-generator
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
            k8s:io.cilium.k8s.policy.cluster: kind-policypilot
            k8s:io.cilium.k8s.policy.serviceaccount: default
            k8s:io.kubernetes.pod.namespace: demo
    ingress:
        - fromEndpoints:
            - matchLabels:
                k8s:app: backend
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
                k8s:version: v1
          toPorts:
            - ports:
                - port: "35060"
                  protocol: TCP
                - port: "35070"
                  protocol: TCP
                - port: "35266"
                  protocol: TCP
                - port: "35280"
                  protocol: TCP
                - port: "35292"
                  protocol: TCP
                - port: "35304"
                  protocol: TCP
                - port: "35312"
                  protocol: TCP
                - port: "43376"
                  protocol: TCP
                - port: "43386"
                  protocol: TCP
                - port: "43388"
                  protocol: TCP
                - port: "43390"
                  protocol: TCP
                - port: "43404"
                  protocol: TCP
                - port: "55538"
                  protocol: TCP
                - port: "55552"
                  protocol: TCP
                - port: "55564"
                  protocol: TCP
                - port: "55570"
                  protocol: TCP
                - port: "55580"
                  protocol: TCP
                - port: "56214"
                  protocol: TCP
                - port: "56216"
                  protocol: TCP
                - port: "56228"
                  protocol: TCP
                - port: "56236"
                  protocol: TCP
                - port: "56246"
                  protocol: TCP
                - port: "58448"
                  protocol: TCP
                - port: "58462"
                  protocol: TCP
                - port: "58466"
                  protocol: TCP
                - port: "58468"
                  protocol: TCP
                - port: "58474"
                  protocol: TCP
                - port: "60534"
                  protocol: TCP
                - port: "60550"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                k8s:app: database
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
                k8s:version: v1
          toPorts:
            - ports:
                - port: "35484"
                  protocol: TCP
                - port: "35498"
                  protocol: TCP
                - port: "35502"
                  protocol: TCP
                - port: "35516"
                  protocol: TCP
                - port: "35520"
                  protocol: TCP
                - port: "38590"
                  protocol: TCP
                - port: "38598"
                  protocol: TCP
                - port: "38614"
                  protocol: TCP
                - port: "38618"
                  protocol: TCP
                - port: "38622"
                  protocol: TCP
                - port: "44228"
                  protocol: TCP
                - port: "44236"
                  protocol: TCP
                - port: "47260"
                  protocol: TCP
                - port: "47270"
                  protocol: TCP
                - port: "47286"
                  protocol: TCP
                - port: "47290"
                  protocol: TCP
                - port: "47294"
                  protocol: TCP
                - port: "48058"
                  protocol: TCP
                - port: "48062"
                  protocol: TCP
                - port: "48078"
                  protocol: TCP
                - port: "48092"
                  protocol: TCP
                - port: "48104"
                  protocol: TCP
                - port: "54212"
                  protocol: TCP
                - port: "54220"
                  protocol: TCP
                - port: "54234"
                  protocol: TCP
                - port: "54236"
                  protocol: TCP
                - port: "54248"
                  protocol: TCP
                - port: "54518"
                  protocol: TCP
                - port: "54520"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                k8s:app: frontend
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
                k8s:version: v1
          toPorts:
            - ports:
                - port: "33820"
                  protocol: TCP
                - port: "33832"
                  protocol: TCP
                - port: "33834"
                  protocol: TCP
                - port: "33840"
                  protocol: TCP
                - port: "33846"
                  protocol: TCP
                - port: "47296"
                  protocol: TCP
                - port: "47302"
                  protocol: TCP
                - port: "47314"
                  protocol: TCP
                - port: "47328"
                  protocol: TCP
                - port: "47338"
                  protocol: TCP
                - port: "53722"
                  protocol: TCP
                - port: "53726"
                  protocol: TCP
                - port: "54790"
                  protocol: TCP
                - port: "54802"
                  protocol: TCP
                - port: "54804"
                  protocol: TCP
                - port: "54812"
                  protocol: TCP
                - port: "54816"
                  protocol: TCP
                - port: "55338"
                  protocol: TCP
                - port: "55354"
                  protocol: TCP
                - port: "57826"
                  protocol: TCP
                - port: "57836"
                  protocol: TCP
                - port: "57846"
                  protocol: TCP
                - port: "57860"
                  protocol: TCP
                - port: "57864"
                  protocol: TCP
                - port: "60762"
                  protocol: TCP
                - port: "60764"
                  protocol: TCP
                - port: "60768"
                  protocol: TCP
                - port: "60776"
                  protocol: TCP
                - port: "60780"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: coredns
                k8s:io.kubernetes.pod.namespace: kube-system
                k8s:k8s-app: kube-dns
          toPorts:
            - ports:
                - port: "33478"
                  protocol: UDP
                - port: "34500"
                  protocol: UDP
                - port: "35177"
                  protocol: UDP
                - port: "35274"
                  protocol: UDP
                - port: "35524"
                  protocol: UDP
                - port: "35594"
                  protocol: UDP
                - port: "35629"
                  protocol: UDP
                - port: "35692"
                  protocol: UDP
                - port: "35910"
                  protocol: UDP
                - port: "35975"
                  protocol: UDP
                - port: "36071"
                  protocol: UDP
                - port: "36231"
                  protocol: UDP
                - port: "36310"
                  protocol: UDP
                - port: "36348"
                  protocol: UDP
                - port: "36409"
                  protocol: UDP
                - port: "36437"
                  protocol: UDP
                - port: "36496"
                  protocol: UDP
                - port: "36540"
                  protocol: UDP
                - port: "36624"
                  protocol: UDP
                - port: "36995"
                  protocol: UDP
                - port: "37522"
                  protocol: UDP
                - port: "37619"
                  protocol: UDP
                - port: "37905"
                  protocol: UDP
                - port: "39390"
                  protocol: UDP
                - port: "40318"
                  protocol: UDP
                - port: "40954"
                  protocol: UDP
                - port: "41224"
                  protocol: UDP
                - port: "41251"
                  protocol: UDP
                - port: "41257"
                  protocol: UDP
                - port: "41276"
                  protocol: UDP
                - port: "41300"
                  protocol: UDP
                - port: "41617"
                  protocol: UDP
                - port: "41625"
                  protocol: UDP
                - port: "42305"
                  protocol: UDP
                - port: "42338"
                  protocol: UDP
                - port: "42460"
                  protocol: UDP
                - port: "43436"
                  protocol: UDP
                - port: "44103"
                  protocol: UDP
                - port: "44365"
                  protocol: UDP
                - port: "45512"
                  protocol: UDP
                - port: "46064"
                  protocol: UDP
                - port: "46608"
                  protocol: UDP
                - port: "46625"
                  protocol: UDP
                - port: "46751"
                  protocol: UDP
                - port: "48317"
                  protocol: UDP
                - port: "48825"
                  protocol: UDP
                - port: "48859"
                  protocol: UDP
                - port: "49523"
                  protocol: UDP
                - port: "49926"
                  protocol: UDP
                - port: "50102"
                  protocol: UDP
                - port: "50575"
                  protocol: UDP
                - port: "50632"
                  protocol: UDP
                - port: "51287"
                  protocol: UDP
                - port: "51607"
                  protocol: UDP
                - port: "51801"
                  protocol: UDP
                - port: "52132"
                  protocol: UDP
                - port: "52539"
                  protocol: UDP
                - port: "52605"
                  protocol: UDP
                - port: "53385"
                  protocol: UDP
                - port: "53464"
                  protocol: UDP
                - port: "53727"
                  protocol: UDP
                - port: "53988"
                  protocol: UDP
                - port: "54134"
                  protocol: UDP
                - port: "54253"
                  protocol: UDP
                - port: "54414"
                  protocol: UDP
                - port: "54698"
                  protocol: UDP
                - port: "54982"
                  protocol: UDP
                - port: "55060"
                  protocol: UDP
                - port: "55355"
                  protocol: UDP
                - port: "55368"
                  protocol: UDP
                - port: "55614"
                  protocol: UDP
                - port: "55948"
                  protocol: UDP
                - port: "56132"
                  protocol: UDP
                - port: "57037"
                  protocol: UDP
                - port: "57493"
                  protocol: UDP
                - port: "57539"
                  protocol: UDP
                - port: "58092"
                  protocol: UDP
                - port: "58210"
                  protocol: UDP
                - port: "58383"
                  protocol: UDP
                - port: "58703"
                  protocol: UDP
                - port: "59176"
                  protocol: UDP
                - port: "59377"
                  protocol: UDP
                - port: "60171"
                  protocol: UDP
                - port: "60192"
                  protocol: UDP
                - port: "60540"
                  protocol: UDP
                - port: "60619"
                  protocol: UDP
                - port: "60857"
                  protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: kube-system-policy
    namespace: kube-system
spec:
    endpointSelector:
        matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
            k8s:io.cilium.k8s.policy.cluster: kind-policypilot
            k8s:io.cilium.k8s.policy.serviceaccount: coredns
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
    ingress:
        - fromEndpoints:
            - matchLabels:
                k8s:app: backend
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
                k8s:version: v1
          toPorts:
            - ports:
                - port: "53"
                  protocol: UDP
        - fromEndpoints:
            - matchLabels:
                k8s:app: frontend
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
                k8s:version: v1
          toPorts:
            - ports:
                - port: "53"
                  protocol: UDP
        - fromEndpoints:
            - matchLabels:
                k8s:app: traffic-generator
                k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: demo
                k8s:io.cilium.k8s.policy.cluster: kind-policypilot
                k8s:io.cilium.k8s.policy.serviceaccount: default
                k8s:io.kubernetes.pod.namespace: demo
          toPorts:
            - ports:
                - port: "53"
                  protocol: UDP
